k8s-yaml/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paasta
  labels:
    paasta/ns: ""
---
