k8s-yaml/storage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  namespace: paasta
spec:
  ports:
    - port: 55001
      targetPort: 55001
      name : keystone
    - port: 10008
      targetPort: 10008
      name : proxy
    - port: 13306
      targetPort: 13306
      name : mariadb
      appProtocol: mysql
---
apiVersion: v1
kind: Endpoints
metadata:
  name: storage-service
  namespace: paasta
subsets:
- addresses:
    - ip: 10.0.2.120
  ports:
    - port: 55001
      name : keystone
    - port: 10008
      name : proxy
    - port: 13306
      name : mariadb
