k8s-yaml/allow-cf-db-ingress-from-cf-workloads.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cf-db-ingress-from-cf-workloads
  namespace: cf-db
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          cf-for-k8s.cloudfoundry.org/cf-workloads-ns: ""
      podSelector:
        matchLabels:
          cloudfoundry.org/org_name: system
      podSelector:
        matchLabels:
          cloudfoundry.org/space_name: dev
---
